<resources>
    <string name="app_name">BinList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="enter_bin">Enter the first digits of a card number (BIN/IIN)</string>
    <string name="question">\?</string>
    <string name="scheme">Scheme</string>
    <string name="type">Type</string>
    <string name="brand">Brand</string>
    <string name="prepaid">Prepaid</string>
    <string name="country">Country</string>
    <string name="currency">Currency</string>
    <string name="emoji">Emoji</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="bank">Bank</string>
    <string name="coordinates">Coordinates</string>
</resources>